# botbwiki

./: .gitignore  AI_CONFIG_OPTIMIZATION.md  AI_IMPLEMENTATION_SUMMARY.md  AI_SUMMARY_PROJECT_OVERVIEW.md  CURRENT_STATUS.md  PROJECT_CLEANUP.md  README.md  activate.bat  activate.ps1  activate.sh  bot.py  check_connection.py  check_env.py  config.py  diagnose.py  env.example  install_ai_deps.sh  lagrange-config-template.json  main.py  pyproject.toml  requirements.txt  start.py  start.sh  verify_config.py
backup/old_ai_plugins/: ai_chat.py
config/: LAGRANGE_CONFIG_GUIDE.md  env.example  lagrange-config-template.json
docs/: ai_quick_start.md  ai_usage.md  bug-fix-duplicate-messages.md  development.md  exemption_usage.md  git-deployment.md  group_summary_usage.md  http_api_usage.md  installation.md  lagrange-config-guide.md  napcat_config_guide.md  napcat_fix_summary.md  napcat_virtual_display_setup.md  project-summary.md  qq-bot-setup.md  quick-start.md  shortlink-fix.md  troubleshooting.md  ubuntu-deployment.md  usage.md  zero-to-one-ubuntu.md  添加权限总结.md
docs/v2/: README.md  todo.md  (+2 more)
plugins/: __init__.py  ai_chat.py  ai_specific_chat.py  ai_summary.py  ai_test_simple.py  ai_unified.py  exemption.py  group_summary.py  message_logger.py  random.py  shortlink.py
scripts/: fix-permissions.sh  install-ubuntu.sh  install.sh  setup-services.sh  start-background.sh  start.sh
systemd-service-templates/: lagrange-onebot.service  qq-bot.service
tools/: 1.txt  README.md  TEST_RESULTS.md  cursor_.md  debug_ai_response.py  debug_messages.py  simple_private_reply.py
(+13 files in other folders)
